--- a/.env.example
+++ b/.env.example
@@ -4,14 +4,7 @@
 NEXT_PUBLIC_WEB_URL = "http://localhost:3000"
 NEXT_PUBLIC_PROJECT_NAME = "ShipAny"
 
-# -----------------------------------------------------------------------------
-# Database with Supabase
-# -----------------------------------------------------------------------------
-# https://supabase.com/docs/guides/getting-started/quickstarts/nextjs
-# Set your Supabase URL and Anon Key
-SUPABASE_URL = ""
-SUPABASE_ANON_KEY = ""
-SUPABASE_SERVICE_ROLE_KEY = ""
+
 
 # -----------------------------------------------------------------------------
 # Auth with next-auth
@@ -60,7 +53,7 @@ STRIPE_PUBLIC_KEY = ""
 STRIPE_PRIVATE_KEY = ""
 STRIPE_WEBHOOK_SECRET = ""
 
-NEXT_PUBLIC_PAY_SUCCESS_URL = "http://localhost:3000/my-orders"
+NEXT_PUBLIC_PAY_SUCCESS_URL = "http://localhost:3000"
 NEXT_PUBLIC_PAY_FAIL_URL = "http://localhost:3000/#pricing"
 NEXT_PUBLIC_PAY_CANCEL_URL = "http://localhost:3000/#pricing"
 
